// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<div
  data-terra-clinical-detail-list="true"
>
  <ul
    class="list"
  />
</div>
`;

exports[`should render a description list when isLabelValuePairList is true 1`] = `
<div
  data-terra-clinical-detail-list="true"
>
  <dl
    class="list"
  >
    <div
      class="detail-list-item"
    >
      <dt>
        label
      </dt>
      <dd>
        value
      </dd>
    </div>
  </dl>
</div>
`;

exports[`should render a list 1`] = `
<div
  data-terra-clinical-detail-list="true"
>
  <ul
    class="list"
  >
    <li
      class="list-item"
    >
      <div
        class="detail-list-item"
      >
        <p>
          Test
        </p>
      </div>
    </li>
    <li
      class="list-item"
    >
      <div
        class="detail-list-item"
      >
        <p>
          Test
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`should render a list when null is passed 1`] = `
<div
  data-terra-clinical-detail-list="true"
>
  <ul
    class="list"
  >
    <li
      class="list-item"
    >
      <div
        class="detail-list-item"
      >
        <p>
          Test
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`should render a title 1`] = `
<div
  data-terra-clinical-detail-list="true"
>
  <h2
    class="title"
  >
    Title
  </h2>
  <ul
    class="list"
  />
</div>
`;

exports[`should render a title and a list 1`] = `
<div
  data-terra-clinical-detail-list="true"
>
  <h2
    class="title"
  >
    Title
  </h2>
  <ul
    class="list"
  >
    <li
      class="list-item"
    >
      <div
        class="detail-list-item"
      >
        <p>
          Test
        </p>
      </div>
    </li>
  </ul>
</div>
`;
